solutions/15_network-policies/linux-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: ubuntu-demo
  namespace: mariusbu
  labels:
    app: test-pod
spec:
  containers:
  - name: ubuntu
    image: ubuntu:latest
    command: ["sleep", "infinity"]
    resources:
      requests:
        cpu: 100m
        memory: 128Mi
      limits:
        cpu: 100m
        memory: 128Mi
