solutions/15_network-policies/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-demo-service
  namespace: mariusbu
spec:
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
