solutions/15_network-policies/network-policies.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-only-from-ns
  namespace: mariusbu
spec:
  podSelector:
    matchLabels:
      app: nginx
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: test-pod

---

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-only-from-ns
  namespace: mariusbu
spec:
  podSelector:
    matchLabels:
      app: nginx
  policyTypes:
    - Ingress
  egress:
   - to:
      - ipBlock:
          cidr: 10.0.0.0/24
